--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jshint": "^2.10.2"
   },
   "scripts": {
-    "test": "jshint hello.js"
+    "test": "jshint hello.js",
+    "start": "node hello.js"
   }
 }
